--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.4",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "classie": "^1.0.1",
+    "Snap.svg": "snap.svg#^0.4.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
